--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Readable, accessible dates for screen readers.",
   "main": "dist/accessible-date.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MikesBarto/accessible-date.git"
+  },
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --reporter spec",
     "build": "babel --presets babel-preset-env src --out-dir dist",
@@ -28,6 +32,6 @@
       "env"
     ]
   },
-  "author": "Barry Horbal",
-  "license": "ISC"
+  "author": "Barry Horbal <barry@barryhorbal.com>",
+  "license": "MIT"
 }
