--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "accessible-date",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Readable, accessible dates for screen readers.",
   "main": "dist/accessible-date.js",
   "repository": {
@@ -18,7 +18,9 @@
     "date",
     "format",
     "screen",
-    "reader"
+    "reader",
+    "english",
+    "spanish"
   ],
   "devDependencies": {
     "babel-cli": "^6.26.0",
