--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "accessible-date",
-  "version": "1.1.0",
+  "version": "1.3.0",
   "description": "Readable, accessible dates for screen readers.",
   "main": "dist/accessible-date.js",
   "repository": {
@@ -20,7 +20,8 @@
     "screen",
     "reader",
     "english",
-    "spanish"
+    "spanish",
+    "french"
   ],
   "devDependencies": {
     "babel-cli": "^6.26.0",
