--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "accessible-date",
-  "version": "1.3.0",
+  "version": "2.0.0",
   "description": "Readable, accessible dates for screen readers.",
   "main": "dist/accessible-date.js",
   "repository": {
@@ -8,9 +8,9 @@
     "url": "https://github.com/MikesBarto/accessible-date.git"
   },
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register --reporter spec",
-    "build": "babel --presets babel-preset-env src --out-dir dist",
-    "prepublish": "npm test; npm run build"
+    "test": "jest",
+    "build": "./node_modules/.bin/babel src --out-dir dist",
+    "prepublish": "npm run test; npm run build"
   },
   "keywords": [
     "accessible",
@@ -23,17 +23,13 @@
     "spanish",
     "french"
   ],
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "chai": "^4.1.2",
-    "mocha": "^3.5.3"
-  },
-  "babel": {
-    "presets": [
-      "env"
-    ]
-  },
   "author": "Barry Horbal <barry@barryhorbal.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/cli": "^7.22.10",
+    "@babel/core": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "core-js": "^3.32.0",
+    "jest": "^29.6.2"
+  }
 }
